Added type attributes to XML_DTD_NODE and XML_ATTRIBUTE_NODE element types. Reported in bug #15918.